# ham-bridge

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  eim_config.toml  partition_table.csv  sdkconfig.defaults
components/: u8g2-hal-esp-idf.patch  u8g2.patch
hardware/: ham-bridge-symbols.kicad_sym  ham_bridge.kicad_pro  ham_bridge.kicad_sch
helpers/: ws_test.py
icons/: Icons.xcf  Microphone.xcf
main/: CMakeLists.txt  config.h  ethernet_handler.c  ethernet_handler.cpp  ethernet_handler.h  hello_world_main.c  http_server.cpp  http_server.h  i2s_handler.c  i2s_handler.cpp  i2s_handler.h  icons.h  idf_component.yml  input_handler.c  input_handler.cpp  input_handler.h  key_cert_manager.cpp  key_cert_manager.h  lrtest.pcm  main.c  main.cpp  rick.pcm  screen_handler.c  screen_handler.cpp  screen_handler.h  tone.pcm  wss_keep_alive.c  wss_keep_alive.cpp  wss_keep_alive.h
main/include/: http_server.h  icons.h  input_handler.h  screen_handler.h
